--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -441,7 +441,7 @@ in a more reliable point estimate of the population parameter.
 5. The shape of the sampling distribution is usually bell-shaped with one peak and centred at the population mean or proportion.
 
 ## Bootstrapping 
-### Bootstrapping Overview 
+### Overview 
 
 We saw in the previous section that we could compute a **point estimate** of a population
 parameter using a sample of observations from the population. And since we had access to the
@@ -455,7 +455,7 @@ using just a single sample from a population.
 
 Here is the key idea. First, if you take a big enough sample, it *looks like* the population. 
 
-[TODO: visualize increasing sample size means sample looks like pop]
+**[TODO: visualize increasing sample size means sample looks like pop]**
 
 In the previous section, we took many samples of the same size *from our population* to get
 a sense for the variability of a sample statistic. But if our sample is big enough that it looks like our population,
@@ -479,9 +479,9 @@ For a sample of size $n$, the process we will go through is as follows:
 7. Calculate the plausible range of values around our observed point estimate
 
 ### Bootstrapping in R 
-Let's continue working with our Airbnb data. Again let's say we are interested
+Let's continue working with our Airbnb data. Once again,  let's say we are interested
 in estimating the population mean price per night of all Airbnb listings in
-Vancouver, Canada. Let's draw a single sample of size `r 40` from the
+Vancouver, Canada. We will draw a single sample of size 40 from the
 population and visualize the distribution of the sample:
 
 ```{r 10-bootstrapping1, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histogram of price per night ($) for one sample of size 20"}
@@ -502,10 +502,16 @@ one_sample_estimates <- one_sample %>%
 one_sample_estimates
 ```
 
-The sample distribution is skewed with a few observations out to the right. The mean of the sample is \$`r round(one_sample_estimates$sample_mean,2)`. Remember, in practice, we usually only have one sample from the population. So this sample and estimate are what we have to work with.
+The sample distribution is skewed with a few observations out to the right. The
+mean of the sample is \$`r round(one_sample_estimates$sample_mean,2)`.
+Remember, in practice, we usually only have one sample from the population. So
+this sample and estimate are the only data we can work with.
 
-We do steps 1 - 5 above to generate a single bootstrap sample in R using the sample we just took and calculate the bootstrap estimate for that sample. We will use the `rep_sample_n` function as we did when we were creating our sampling distribution. Since we want to sample with replacement, we change the argument for `replace` from its default value of `FALSE` to `TRUE`.
-
+We now perform steps 1 - 5 listed above to generate a single bootstrap sample in R using the
+sample we just took, and calculate the bootstrap estimate for that sample. We
+will use the `rep_sample_n` function as we did when we were creating our
+sampling distribution. Since we want to sample with replacement, we change the
+argument for `replace` from its default value of `FALSE` to `TRUE`.
 
 ```{r 10-bootstrapping3, echo = TRUE, message = FALSE, warning = FALSE}
 boot1 <- one_sample %>%
@@ -521,9 +527,19 @@ boot1_dist
 summarise(boot1, mean = mean(price))
 ```
 
-Notice that our bootstrap distribution has a similar shape to the original sample distribution. Though the shapes of the distributions are similar, they are not identical. You'll also notice that the original sample mean and the bootstrap sample mean differ. How might that happen? Remember that we are sampling with replacement from the original sample, so we don't end up with the same sample values again. We are trying to mimic drawing another sample from the population without actually having to do that.
+Notice that our bootstrap distribution has a similar shape to the original
+sample distribution. Though the shapes of the distributions are similar, they
+are not identical. You'll also notice that the original sample mean and the
+bootstrap sample mean differ. How might that happen? Remember that we are
+sampling with replacement from the original sample, so we don't end up with the
+same sample values again. We are trying to mimic drawing another sample from
+the population without actually having to do that.
 
-Let's now take 1500 bootstrap samples from the original sample we drew from the population (`one_sample`)  using `rep_sample_n` and calculate the means for each of those replicates.
+Let's now take 1500 bootstrap samples from the original sample we drew from the
+population (`one_sample`)  using `rep_sample_n` and calculate the means for
+each of those replicates. Recall that this assumes that `one_sample` *looks like*
+our original population; but since we do not have access to the population itself,
+this is often the best we can do.
 
 ```{r 10-bootstrapping4, echo = TRUE, message = FALSE, warning = FALSE}
 boot1500 <- one_sample %>%
@@ -537,7 +553,9 @@ head(boot1500_means)
 tail(boot1500_means)
 ```
 
-Why are we doing this? As mentioned earlier, in reality, we typically only have one sample. So we can sample from that original sample with replacement (i.e., bootstrapping) many times to create many bootstrap samples. We can then calculate point estimates for each bootstrap sample and generate a bootstrap distribution of our point estimates. The bootstrap distribution suggests how we might expect our point estimate to behave if we took another sample.
+We now calculate point estimates for each bootstrap sample and generate a bootstrap
+distribution of our point estimates. The bootstrap distribution suggests how we
+might expect our point estimate to behave if we took another sample.
 
 ```{r 10-bootstrapping5, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means"}
 boot_est_dist <-  ggplot(boot1500_means, aes(x = mean)) +
@@ -545,7 +563,8 @@ boot_est_dist <-  ggplot(boot1500_means, aes(x = mean)) +
     xlab("Sample mean price per night ($)") 
 ```
 
-Let's compare our bootstrap distribution with a sampling distribution. What do you notice? 
+Let's compare our bootstrap distribution with the true sampling distribution (taking many samples from the population). 
+
 ```{r 10-bootstrapping6, echo = F, message = FALSE, warning = FALSE, fig.cap = "Comparison of distribution of the bootstrap sample means and sampling distribution"}
 
 samples <- rep_sample_n(airbnb, size = 40, reps = 1500)
@@ -576,7 +595,15 @@ grid.arrange(sampling_dist + xlim(min_x(sampling_dist), max_x(sampling_dist)) + 
              annotated_boot_est_dist + xlim(min_x(sampling_dist), max_x(boot_est_dist)) + ggtitle("Bootstrap distribution"),
              ncol = 2)
 ```
-First, we see how the sampling distribution is centred at \$`r round(mean(airbnb$price),2)`, the population mean value. The sampling is random, and the estimates are centred at the population mean, as we learned in the previous section. However, the bootstrap distribution is centred at \$`r round(mean(boot1500_means$mean), 2)`, which is the original sample's mean price per night. Remember that we are resampling from the original sample over and over again, so we see that the bootstrap distribution is centred at the original sample's mean value. We also notice that the shape and spread of the two distributions are somewhat similar. 
+There are two important points that we can take away from these plots.
+First, we see how the sampling distribution is centred at \$`r round(mean(airbnb$price),2)`, the 
+population mean value, as we learned in
+the previous section. However, the bootstrap distribution is centred at \$`r round(mean(boot1500_means$mean), 2)`, which 
+is the original sample's mean price per night. This is because we are resampling from the original sample over and
+over again, so we see that the bootstrap distribution is centred at the
+original sample's mean value. The second important point is that the shape and spread of the true sampling distribution
+and the bootstrap distribution is similar; the bootstrap distribution lets us get a sense for the variability of the 
+point estimate.
 
 ```{r 10-bootstrapping7, echo = F, message = FALSE, warning = FALSE, fig.cap = "Summary of bootstrapping process"}
 pop_dist <- population_distribution + ggtitle("Population") + xlab("Price") +
@@ -688,8 +715,14 @@ grid.text(".", x = unit(0.7, "npc"),
 
 ```
 
-### Using bootstrapping to calculate a plausible range  
-Now that we have constructed our bootstrap distribution let's use it to create a confidence interval for the mean, a range of plausible values for the population mean. Confidence intervals can be set at different levels. Common levels are 90\%, 95\% and 99\%. There is a balance between your level of confidence and an interval's precision, so the confidence level you choose will depend on the application. Suppose we want to construct a 95\% confidence interval using the bootstrap distribution we found earlier.
+### Using the bootstrap to calculate a plausible range  
+Now that we have constructed our bootstrap distribution let's use it to create
+a *confidence interval* for the mean, a range of plausible values for the
+population mean. Confidence intervals can be set at different levels. Common
+levels are 90\%, 95\% and 99\%. There is a balance between your level of
+confidence and an interval's precision, so the confidence level you choose will
+depend on the application. Suppose we want to construct a 95\% confidence
+interval using the bootstrap distribution we found earlier.
 
 To calculate a 95% confidence interval using bootstrapping: 
 
@@ -707,8 +740,10 @@ bounds <- boot1500_means %>%
 bounds
 ```
 
-
-We're 95\% "confident" that the true population mean price per night of Airbnb listings in Vancouver is between \$`r round(bounds[1],2) ` and \$`r round(bounds[2],2)`. Suppose we repeated this process of sampling and constructing confidence intervals more times with more samples. We'd expect 95\% of intervals would contain the true population parameter. 
+We're 95\% "confident" that the true population mean price per night of Airbnb
+listings in Vancouver is between \$`r round(bounds[1],2) ` and \$`r round(bounds[2],2)`. Suppose 
+we repeated this process of sampling and constructing confidence intervals more times with more samples. We'd expect
+95\% of intervals would contain the true population parameter. 
 
 ```{r 10-bootstrapping9, echo = F, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means with 95% confidence interval lower and upper bounds"}
 boot_est_dist + 
@@ -718,9 +753,15 @@ boot_est_dist +
     annotate("text", x = bounds[2], max_count(boot_est_dist), hjust = 0.5, vjust =2,
            label = paste("97.5th percentile =", round(bounds[2], 2)))
 ```
-Here we notice that our 95\% confidence interval does indeed contain the true population mean value, \$`r round(mean(airbnb$price),2)`\! However, in practice, we would not know whether our interval captured the true population parameter or not because we usually only have a single sample, not the entire population.
+Here we notice that our 95\% confidence interval does indeed contain the true
+population mean value, \$`r round(mean(airbnb$price),2)`\! However, in
+practice, we would not know whether our interval captured the true population
+parameter or not because we usually only have a single sample, not the entire
+population.
 
 ## Additional readings
 
 For more about statistical inference and bootstrapping, refer to pages 187-190  
-of [Introduction to Statistical Learning with Applications in R](http://www-bcf.usc.edu/~gareth/ISL/ISLR%20Seventh%20Printing.pdf) by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani, and Chapters 7 - 8 of [Modern Dive](https://moderndive.com/) Statistical Inference via Data Science by Chester Ismay and Albert Y. Kim
+of [Introduction to Statistical Learning with Applications in R](http://www-bcf.usc.edu/~gareth/ISL/ISLR%20Seventh%20Printing.pdf) by 
+Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani, and Chapters 7 - 8 of [Modern Dive](https://moderndive.com/) Statistical 
+Inference via Data Science by Chester Ismay and Albert Y. Kim.
