--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -1,6 +1,6 @@
 # Introduction to Statistical Inference {#inference}
 
-```{r set-up, echo = F, message = F}
+```{r 10-setup, include= F}
 library(tidyverse) 
 require(grid) #  grid.bezier()
 
@@ -98,7 +98,9 @@ Let's start with an illustrative (and tasty!) example. Timbits are
 bite-sized doughnuts sold at Tim Hortons, a popular Canadian-based fast-food restaurant
 chain founded in Hamilton, Ontario, Canada. 
 
-![Timbits. Source: wikimedia.org](https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Timbits2.jpg/1600px-Timbits2.jpg){width=50%}
+![Timbits. Source: wikimedia.org](https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Timbits2.jpg/1600px-Timbits2.jpg){width=50%} 
+<!--- CC0 https://commons.wikimedia.org/wiki/File:Timbits2.jpg --->
+
 
 Suppose we wanted to estimate the true proportion of chocolate doughnuts at Tim
 Hortons restaurants. Now, of course, we (the authors!) do not have access to the true population.
@@ -379,7 +381,7 @@ sampling_distribution_100 <-  ggplot(sample_estimates_100, aes(x = sample_mean))
 sampling_distribution_500 <-  ggplot(sample_estimates_500, aes(x = sample_mean)) +
     geom_histogram(fill="#0072B2", color="#e9ecef") +
     xlab("Sample mean price per night ($)") +
-    ggtitle("n = 100") + xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
+    ggtitle("n = 500") + xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 
 ```
 
@@ -450,12 +452,55 @@ the estimate would vary for different samples from the population.
 But in real data analysis settings, we usually have *just one sample* from our population,
 and do not have access to the population itself. So how do we get a sense for how
 variable our point estimate is when we only have one sample to work with?
-In this section, we will discuss **interval estimation** and construct **confidence intervals** 
+In this section, we will discuss **interval estimation**
 using just a single sample from a population.
 
-Here is the key idea. First, if you take a big enough sample, it *looks like* the population. 
+Here is the key idea. First, if you take a big enough sample, it *looks like* the population. Notice the histograms' shapes for samples of different sizes taken from the population in the picture below. We see that for a large enough sample, the sample's distribution looks like that of the population.
 
-**[TODO: visualize increasing sample size means sample looks like pop]**
+
+```{r 10-example-bootstrapping0, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Comparision of samples of different sizes from the population"}
+
+sample_10 <- airbnb %>% 
+    rep_sample_n(10)
+sample_distribution_10 <- ggplot(sample_10, aes(price)) + 
+    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    xlab("Price per night ($)") + ggtitle("n = 10")
+
+sample_20 <- airbnb %>% 
+    rep_sample_n(20)
+sample_distribution_20 <- ggplot(sample_20, aes(price)) + 
+    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    xlab("Price per night ($)") + ggtitle("n = 20")
+sample_50 <- airbnb %>% 
+    rep_sample_n(50)
+sample_distribution_50 <- ggplot(sample_50, aes(price)) + 
+    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    xlab("Price per night ($)") + ggtitle("n = 50")
+sample_100 <- airbnb %>% 
+    rep_sample_n(100)
+sample_distribution_100 <- ggplot(sample_100, aes(price)) + 
+    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    xlab("Price per night ($)") + ggtitle("n = 100")
+
+sample_200 <- airbnb %>% 
+    rep_sample_n(200)
+sample_distribution_200 <- ggplot(sample_200, aes(price)) + 
+    geom_histogram(fill="#0072B2", color="#e9ecef") +
+    xlab("Price per night ($)") + ggtitle("n = 200")
+
+grid.arrange(sample_distribution_10, 
+             sample_distribution_20,
+             sample_distribution_50, 
+             sample_distribution_100,
+             sample_distribution_200,
+             population_distribution + ggtitle("Population distribution"),
+             ncol = 2)
+             #widths = c(2, 3),
+            # layout_matrix =  rbind(c(1, 2),
+                                 #   c(1, 3),
+                                  #  c(1, 4),
+                                  #  c(1, 5)))
+```
 
 In the previous section, we took many samples of the same size *from our population* to get
 a sense for the variability of a sample statistic. But if our sample is big enough that it looks like our population,
@@ -484,7 +529,7 @@ in estimating the population mean price per night of all Airbnb listings in
 Vancouver, Canada. We will draw a single sample of size 40 from the
 population and visualize the distribution of the sample:
 
-```{r 10-bootstrapping1, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histogram of price per night ($) for one sample of size 20"}
+```{r 10-bootstrapping1, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histogram of price per night ($) for one sample of size 40"}
 one_sample <- airbnb %>% 
     rep_sample_n(40) %>% 
     ungroup() %>% # ungroup the data frame 
@@ -578,16 +623,16 @@ sampling_dist <-  ggplot(sample_estimates, aes(x = sample_mean)) +
     xlab("Sample mean price per night ($)")
 
 sampling_dist <- sampling_dist +
-  annotate("text", x = max_x(sampling_dist), max_count(sampling_dist), hjust = 1, vjust =1,
-           label = paste("mean = ", round(mean(sample_estimates$sample_mean), 1))) + 
   annotate("text", x = max_x(sampling_dist), max_count(sampling_dist), hjust = 1, vjust =3,
+           label = paste("mean = ", round(mean(sample_estimates$sample_mean), 1))) + 
+  annotate("text", x = max_x(sampling_dist), max_count(sampling_dist), hjust = 1, vjust =5,
            label = paste("sd = ", round(sd(sample_estimates$sample_mean), 1))) + 
   geom_vline(xintercept = mean(sample_estimates$sample_mean), col = "red")
 
 annotated_boot_est_dist <- boot_est_dist + 
-  annotate("text", x = max_x(boot_est_dist), max_count(boot_est_dist), hjust = 1, vjust =1,
+  annotate("text", x = max_x(boot_est_dist), max_count(boot_est_dist), hjust = 1, vjust =0,
            label = paste("mean = ", round(mean(boot1500_means$mean), 1))) + 
-    annotate("text", x = max_x(boot_est_dist), max_count(boot_est_dist), hjust = 1, vjust =3,
+    annotate("text", x = max_x(boot_est_dist), max_count(boot_est_dist), hjust = 1, vjust =2,
            label = paste("sd = ", round(sd(boot1500_means$mean), 1))) + 
   geom_vline(xintercept = mean(boot1500_means$mean), col = "red")
 
@@ -716,15 +761,9 @@ grid.text(".", x = unit(0.7, "npc"),
 ```
 
 ### Using the bootstrap to calculate a plausible range  
-Now that we have constructed our bootstrap distribution let's use it to create
-a *confidence interval* for the mean, a range of plausible values for the
-population mean. Confidence intervals can be set at different levels. Common
-levels are 90\%, 95\% and 99\%. There is a balance between your level of
-confidence and an interval's precision, so the confidence level you choose will
-depend on the application. Suppose we want to construct a 95\% confidence
-interval using the bootstrap distribution we found earlier.
+Now that we have constructed our bootstrap distribution let's use it to find a range of plausible values for the population mean. We will find the range of values that cover the middle 95\% of the bootstrap distribution. Note that there's nothing particularly special about 95\%, we could have used other levels, such as 90\% or 99\%. The level you choose will depend on your application, which is beyond the scope of this textbook.
 
-To calculate a 95% confidence interval using bootstrapping: 
+To calculate our interval estimate, we will do the following:
 
 1. Arrange the observations in the bootstrap distribution in ascending order 
 2. Find the value such that 2.5\% of observations fall below it (the 2.5\% percentile). Use that value as the lower bound of the interval 
@@ -740,10 +779,7 @@ bounds <- boot1500_means %>%
 bounds
 ```
 
-We're 95\% "confident" that the true population mean price per night of Airbnb
-listings in Vancouver is between \$`r round(bounds[1],2) ` and \$`r round(bounds[2],2)`. Suppose 
-we repeated this process of sampling and constructing confidence intervals more times with more samples. We'd expect
-95\% of intervals would contain the true population parameter. 
+Our interval, \$`r round(bounds[1],2) ` to \$`r round(bounds[2],2)`, captures the middle 95\% of the sample mean prices in the bootstrap distribution. We can visualize the interval on our distribution in the picture below. 
 
 ```{r 10-bootstrapping9, echo = F, message = FALSE, warning = FALSE, fig.cap = "Distribution of the bootstrap sample means with 95% confidence interval lower and upper bounds"}
 boot_est_dist + 
@@ -753,7 +789,8 @@ boot_est_dist +
     annotate("text", x = bounds[2], max_count(boot_est_dist), hjust = 0.5, vjust =2,
            label = paste("97.5th percentile =", round(bounds[2], 2)))
 ```
-Here we notice that our 95\% confidence interval does indeed contain the true
+
+Here we notice that our interval does indeed contain the true
 population mean value, \$`r round(mean(airbnb$price),2)`\! However, in
 practice, we would not know whether our interval captured the true population
 parameter or not because we usually only have a single sample, not the entire
