--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -20,9 +20,9 @@ min_x <- function(dist) {
 
 
 ## Overview
-In almost all data analysis tasks in practice, we want to draw conclusions about some unknown
+Another common data analysis task in practice is to draw conclusions about some unknown
 aspect of a population of interest based on observed data sampled from that
-population; we typically do not get data on the *full* population.
+population; we typically do not get data on the *entire* population.
 Data analysis questions regarding how summaries, 
 patterns, trends, or relationships in a dataset 
 extend to the wider population are called *inferential questions*. This chapter will start
