--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -52,8 +52,8 @@ population. Here is an example question that we might use statistical inference 
 *What proportion of all undergraduate students in North America own an iPhone?*
 
 In the above question, we are interested in making a conclusion about *all*
-undergraduate students in North America.  This is our **population**: 
-in general, the population is the complete collection of individuals or cases we are interested in studying. 
+undergraduate students in North America; this is our **population**.
+In general, the population is the complete collection of individuals or cases we are interested in studying. 
 Further, in the above question, we are interested in computing a quantity&mdash;the proportion
 of iPhone owners&mdash;based on the entire population. This is our **population parameter**:
 in general, a population parameter is a numerical characteristic
