--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -55,8 +55,8 @@ In the above question, we are interested in making a conclusion about *all*
 undergraduate students in North America; this is our **population**.
 In general, the population is the complete collection of individuals or cases we are interested in studying. 
 Further, in the above question, we are interested in computing a quantity&mdash;the proportion
-of iPhone owners&mdash;based on the entire population. This is our **population parameter**:
-in general, a population parameter is a numerical characteristic
+of iPhone owners&mdash;based on the entire population. This is our **population parameter**.
+In general, a population parameter is a numerical characteristic
 of the entire population. In order to compute this number in the example above, we would need to ask 
 every single undergraduate in North America whether or not they own an iPhone. In practice,
 directly computing population parameters is often time-consuming and costly, and sometimes impossible. 
