--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -64,9 +64,9 @@ directly computing population parameters is often time-consuming and costly, and
 A more practical approach would be to collect measurements for a **sample**: a subset of
 individuals collected from the population. We can then compute a **sample statistic**&mdash;a numerical
 characteristic of the sample&mdash;that estimates the population parameter. For example, if we 
-randomly selected 100 undergraduate students across North America (the sample) and computed the fraction of those
-students who own an iPhone (the sample statistic), we might suspect that that fraction is a reasonable
-estimate of the full population fraction. 
+randomly selected 100 undergraduate students across North America (the sample) and computed the proportion of those
+students who own an iPhone (the sample statistic), we might suspect that that proportion is a reasonable
+estimate of the proportion of students who own an iPhone in the entire population. 
 
 <center>
 ![Figure 11.1: Population versus sample](img/population_vs_sample.svg){}
