--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -145,7 +145,7 @@ choc_sample_1 <- summarize(samples_1, n = sum(flavour == "chocolate"),
 choc_sample_1
 ```
 Here we see that the proportion of chocolate Timbits in this random sample is
-`r round(choc_sample_1$prop,2)`. This value is our sample statistic; since it is a single
+`r round(choc_sample_1$prop,2)`. This value is our estimate - our best guess of our population parameter using this sample. Given that it is a single
 value that is used to estimate a population parameter, we refer to it as a **point estimate**.
 
 Now imagine we took another random sample of 40 Timbits from the population. Do you
