--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -105,7 +105,7 @@ Suppose we wanted to estimate the true proportion of chocolate doughnuts at Tim
 Hortons restaurants. Now, of course, we (the authors!) do not have access to the true population.
 So for this chapter, we created a fictitious box of 10,000 Timbits with two flavours&mdash;old-fashioned 
 and chocolate&mdash;as our population, and use this to illustrate
-inferential concepts. Below we have a `tibble()` called `virtual_box` with a subject ID and Timbit flavour as our columns. We have also loaded our necessary packages: `tidyverse` and the `infer` package, which we will need to perform sampling later in the chapter.  
+inferential concepts. Below we have a `tibble()` called `virtual_box` with a Timbit ID and flavour as our columns. We have also loaded our necessary packages: `tidyverse` and the `infer` package, which we will need to perform sampling later in the chapter.  
 
 ```{r 11-example-proportions, echo = FALSE, message = FALSE, warning = FALSE}
 library(gridExtra)
