--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -140,8 +140,9 @@ to take.
 
 ```{r 11-example-proportions3, echo = TRUE, message = FALSE, warning = FALSE}
 samples_1 <- rep_sample_n(tbl = virtual_box, size = 40)
-choc_sample_1 <- summarize(samples_1, n = sum(flavour == "chocolate"),
-                                        prop = sum(flavour == "chocolate") / 40)
+choc_sample_1 <- summarize(samples_1, 
+                           n = sum(flavour == "chocolate"),
+                           prop = sum(flavour == "chocolate") / 40)
 choc_sample_1
 ```
 Here we see that the proportion of chocolate Timbits in this random sample is
