--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -303,7 +303,7 @@ Also recall from the previous section that the point estimate can vary; if
 we took another random sample from the population, then the value of our statistic may change.
 So then did we just get lucky with our point estimate above?
 How much does our estimate vary across different samples of size 20 in this example? Again, since we have access to the population,
-we can take many samples and plot the **sampling distribution** of the point estimates to get a sense
+we can take many samples and plot the **sampling distribution** of sample means for samples of size 20 to get a sense
 for this variation. In this case, we'll use 1500 samples of size 20.
 
 ```{r 11-example-means4, echo = TRUE, message = FALSE, warning = FALSE, fig.cap= "Sampling distribution of the sample means for sample size of 20"}
