--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -430,7 +430,7 @@ Based on the visualization, two points about the sample mean become clear.
 First, the
 mean of the sample mean (across samples) is equal to the population mean.
 Second, increasing the size of the sample
-decreases the standard deviation (i.e., the variability) in the sample mean
+decreases the spread (i.e., the variability) in the sample mean
 point estimate of the population mean. Therefore, a larger sample size results
 in a more reliable point estimate of the population parameter.
 
