--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -132,11 +132,8 @@ virtual_box %>%
              proportion = n() / 10000)
 ```
 
-Suppose we buy a box of 40 randomly-selected Timbits and count the number of chocolate Timbits,
-i.e., take a random sample of size 40 from our Timbits population. The function
-`rep_sample_n` from the `infer` package will allow us to sample. The arguments
-of `rep_sample_n` are (1) the data frame to sample from, and (2) the size of the sample
-to take.
+What would happen if we were to buy a box of 40 randomly-selected Timbits and count the number of chocolate Timbits (*i.e.,* take a random sample of size 40 from our Timbits population)? Let's use R to simulate this using our `virtual_box` population. We can do this using the `rep_sample_n` function from the `infer` package. The arguments
+of `rep_sample_n` are (1) the data frame (or tibble) to sample from, and (2) the size of the sample to take.
 
 ```{r 11-example-proportions3, echo = TRUE, message = FALSE, warning = FALSE}
 samples_1 <- rep_sample_n(tbl = virtual_box, size = 40)
